Add UpdateCocktail endpoint to CocktailController
