# backend/docs/swagger.yaml
@@ -69,6 +69,27 @@ paths:
       summary: Gets all cocktails
       tags:
       - Cocktails
+    patch:
+      consumes:
+      - application/json
+      description: Update an existing cocktail
+      parameters:
+      - description: Cocktail object
+        in: body
+        name: cocktail
+        required: true
+        schema:
+          $ref: '#/definitions/dtos.CocktailDto'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/dtos.CocktailDto'
+      summary: Update a cocktail
+      tags:
+      - Cocktails
     post:
       consumes:
       - application/json
@@ -106,12 +127,6 @@ paths:
         name: ingredientId
         required: true
         type: integer
-      - description: Cocktail ingredient object
-        in: body
-        name: cocktail
-        required: true
-        schema:
-          $ref: '#/definitions/dtos.CocktailIngredientDto'
       produces:
       - application/json
       responses:
